Fixed overlapping, dnd, storing nulls in json issue

--- a/style/custom/dashboardui.css
+++ b/style/custom/dashboardui.css
@@ -297,3 +297,7 @@ a.disabled {
   opacity: 0.5
   cursor: default
 }
+#chart1, #chart2, #chart3, #chart4, #chart5, #chart6
+{
+	height:250px;
+}
